# EdgeICP

./: .gitignore  CITATION.cff  CMakeLists.txt  ICP.cpp  NOTICE  README.md  interactive_icp.cpp  ndt_icp.cpp  para6700PCTrans.ply  pc.xml  pcTest.xml  pcl_ICP.cpp  ppf_load_match.cpp  usingPcl.cpp
examples/contour_sequence/: associate.txt
src/: contour_icp.cpp
